[package]
name = "pp-rs"
version = "0.2.1"
edition = "2021"
authors = ["pp-rs Developers"]
description = "Shader preprocessor"
homepage = "https://github.com/Kangz/glslpp-rs"
repository = "https://github.com/Kangz/glslpp-rs"
keywords = ["shader", "preprocessor", "glsl"]
license = "BSD-3-Clause"

[dependencies]
compact_str = { version = "0.9", default-features = false, optional = true }
hashbrown = "0.15.3"
unicode-ident = "1.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false

[features]
default = ["compact_str"]
compact_str = ["dep:compact_str"]
